Clean-up
* Remove unused code
* Use generics
* Various small clean-ups